visibility-settings-fix

--- a/social/static/css/yourbit_core.css
+++ b/social/static/css/yourbit_core.css
@@ -1474,16 +1474,49 @@ only be used for object transforms (shaping and scaling)
         border-width: 0px;
     }
 
+    .slide-up-button-container {
+        position: relative;
+        width: fit-content;
+        display: grid;
+        grid-template-columns: auto auto;
+        margin-left: auto;
+        margin-right: auto;
+        column-gap: 10px;
+    }
+
+    #create-bit-type-mobile {
+        grid-column: 1;
+        display: grid;
+        position: relative;
+        width: fit-content;
+        margin-top:auto;
+        margin-bottom: auto;
+
+    }
+
+    .type-button {
+        position: relative;
+        width: 60px;
+        height: 30px;
+        background-color: rgba(0,0,0,0.3);
+        border-width: 0px;
+        border-radius: 0.25em;
+        padding: 4px;
+        margin: 2px;
+        transition: 0.3s;
+    }
+
     #mobile-publish-bit {
+        position: relative;
         border-width: 0px;
         border-radius: 10px;
-        height: 50px;
-        width: 75px;
-        margin-top: 10px;
+        height: 40px;
+        width: 70px;
         color: white;
         font-size: 14px;
         font-weight: 600;
         text-align: center;
+        grid-column: 2;
     }
 
     #search-mobile {
